# zat

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  foo.ts  home-manager.nix  lib.nix  module.nix  result  submodule.nix  system-module.nix
.github/workflows/: nix-release.yml  release.yml  update-llm-agents-nix.yml
queries/: c.scm  cpp.json  cpp.scm  csharp.scm  go.scm  haskell.scm  java.scm  javascript.json  javascript.scm  kotlin.scm  markdown.scm  python.json  python.scm  ruby.scm  rust.scm  swift.scm  typescript.scm
src/: lib.rs  main.rs  outline.rs
tests/: outline_test.rs
tests/fixtures/: sample.c  sample.cpp  sample.cs  sample.go  sample.hs  sample.java  sample.js  sample.kt  sample.md  sample.py  sample.rb  sample.rs  sample.swift  sample.ts
tests/snapshots/: sample.c.snap  sample.cpp.snap  sample.cs.snap  sample.go.snap  sample.hs.snap  sample.java.snap  sample.js.snap  sample.kt.snap  sample.md.snap  sample.py.snap  sample.rb.snap  sample.rs.snap  sample.swift.snap  sample.ts.snap
