[package]
name = "zat"
version = "0.5.3"
edition = "2024"

[dependencies]
streaming-iterator = "0.1.9"
tree-sitter = "0.26.7"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-haskell = "0.23.1"
tree-sitter-swift = "0.7.1"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-ruby = "0.23.1"
tree-sitter-md = "0.5.3"

[dev-dependencies]
pretty_assertions = "1"
